# jdkman

./: .gitignore  README.ko.md  README.md  mise-java.http  pyproject.toml
.github/workflows/: publish.yml
hook/: Cargo.toml
hook/src/: main.rs
notes/: autocomplete.md  environments.md  homebrew.md  rich.md
scripts/: dev_activate.zsh  dev_completion.zsh  dev_deactivate.zsh  dev_sync.zsh  generate_formula.py  insert_bottle.py
scripts/homebrew/: generate_formula.py
src/jdkman/: autocomplete.py  catalog.py  cli.py  cli_about.py  cli_dev.py  cli_env.py  cli_tools.py  config.py  console.py  detect.py  env_hook.py  environments.py  installer.py  main.py  mise.py  registry.py  utils.py
src/jdkman/custom/: format_error.py
src/jdkman/jvm_spec/: __init__.py  _base.py  temurin.py  zulu.py
src/jdkman/resources/activate_script/: bash  bash_deactivate  bash_dev  zsh  zsh_deactivate  zsh_dev
src/jdkman/resources/env_scripts/: bash  bash_deactivate  bash_dev  fish  fish_deactivate  fish_dev  zsh  zsh_deactivate  zsh_dev
src/jdkman/style/: format_help.py  option_parser.py
tests/: conftest.py  test_catalog.py  test_env_hook.py  test_environments.py  test_installer.py  test_registry.py  test_utils.py
